# hamilton-ops

./: .hamilton_doctor  README.md  pyproject.toml
audit/: chain.py
cli/: audit.py  discovery.py  doctor.py  init.py  main.py  ship.py  templates.py  ui.py
core/: config.py  exceptions.py  priorities.py  stage.py  state.py  supervisor.py
docs/: glosarry.md
drivers/: construction.py  docker_driver.py  k6_driver.py  linter_driver.py  registry.py
hamilton_ops.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/audit/test_audit_chain/: test_audit_chain.py
tests/cli/: test_discovery.py  test_doctor.py  test_init.py  test_main.py
tests/core/: test_config.py
tests/core/test_priorities/: test_priorities_contract.py
tests/core/test_stage/: test_stage.py
tests/core/test_state/: test_state.py
tests/core/test_supervisor/: __init__.py  test_supervisor.py  test_supervisor_edge_cases.py
tests/drivers/test_construction/: test_construction.py  test_construction_driver_gaps.py  test_construction_hardening.py  verify_p1_alarm.py
tests/drivers/test_docker_driver/: test_docker_driver.py  test_docker_driver_gaps.py
tests/drivers/test_k6_driver/: test_k6_driver.py  test_k6_driver_gaps.py  test_k6_reporting_hardened.py
tests/drivers/test_linter_driver/: test_linter_driver.py  test_linter_driver_gaps.py  test_linter_reporting_hardened.py
tests/drivers/test_registry/: test_registry.py  test_registry_gaps.py
tests/integration/: __init__.py  test_full_flight.py  test_proof_of_work.py
