[project]
name = "hamilton-ops"
version = "0.1.0"
description = "A deterministic, security-hardened CI/CD orchestrator"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "pyfiglet>=1.0.2",
    "psutil>=5.9.0",
    "exceptiongroup>=1.1.0; python_version < '3.11'",
]

[project.scripts]
hamilton = "cli.main:app"

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["cli", "core", "drivers", "audit"]
